<resources>
    <string name="app_name">Homeband</string>

    <!-- LoginActivity -->
    <string name="login">Identifiant</string>
    <string name="mail">Adresse E-mail</string>
    <string name="password">Mot de passe</string>
    <string name="connect">Connexion</string>
    <string name="password_lost">Mot de passe oublié ?</string>
    <string name="new_account">Créer un compte</string>
    <string name="title_activity_home">Homeband</string>
    <!-- Menu bottom -->
    <string name="title_home">Home</string>
    <string name="title_place">Localisation</string>
    <string name="title_favorite">Favoris</string>
    <string name="title_settings">Paramètres</string>
    <!-- Activité recherche groupe -->
    <string name="title_activity_search">Recherche groupe</string>
    <string name="title_activity_search_band">Groupe</string>
    <string name="title_activity_search_events">Evenements</string>
    <string name="title_activity_search_style">Style</string>
    <string name="title_activity_search_distance">Distance (km)</string>
    <string name="title_activity_search_button">Rechercher</string>
    <string name="code_postal">Code postal</string>
    <!-- Activité recherche évènements -->
    <string name="title_activity_searchevents">Recherche evenements</string>
    <string name="title_activity_search_date">Date</string>
    <string name="title_activity_search_from">Du</string>
    <string name="title_activity_search_to">Au</string>
    <!-- Activité detail groupe -->
    <string name="detail_groupe_events">Evenements</string>
    <string name="detail_groupe_music">Musique</string>
    <string name="detail_groupe_avis">Avis</string>

    <!-- Autres -->
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- Dialogue -->
    <string name="alert_yes">Oui</string>
    <string name="alert_no">Non</string>
    <string name="alert_update_message">Une mise à jour est disponible. Souhaitez-vous la télécharger maintenant?</string>
    <string name="alert_update_title">Mise à jour disponible</string>
    <string name="alert_loading">Chargement en cours...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="isInit">isInit</string>
    <string name="isAutoConnect">isAutoConnect</string>


</resources>
