<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_place"
        android:icon="@drawable/ic_place_black_24dp"
        android:title="@string/title_place"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/title_favorite"
        app:showAsAction="always|withText"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings"
        app:showAsAction="always|withText"/>

</menu>
