<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.heh.homeband.activities.SearchEventsFrag">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rlStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginVertical="@dimen/layout_distance"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/tvStyle"
                android:layout_width="@dimen/search_label_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/title_activity_search_style" />

            <Spinner
                android:id="@+id/spinStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tvStyle"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlAdresse"
            android:layout_below="@id/rlStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="@dimen/layout_distance"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/etAdresse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_alignBottom="@id/btnLocalisationEvents"
                android:layout_toRightOf="@id/tvAdresse"
                android:layout_toLeftOf="@id/btnLocalisationEvents" />

            <TextView
                android:id="@+id/tvAdresse"
                android:layout_width="@dimen/search_label_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="Adresse" />

            <ImageButton
                android:id="@+id/btnLocalisationEvents"
                android:layout_alignParentRight="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_place_black_24dp" />


        </RelativeLayout>



        <RelativeLayout
            android:id="@+id/rlDistance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlAdresse"
            android:layout_centerHorizontal="true"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/layout_distance">

            <TextView
                android:id="@+id/tvDistance"
                android:layout_width="@dimen/search_label_width"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/title_activity_search_distance" />

            <EditText
                android:id="@+id/etKilometre"
                android:layout_width="@dimen/search_distance_width"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_toRightOf="@id/tvDistance"
                android:ems="10"
                android:inputType="number"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlDistance"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/layout_distance"
            android:id="@+id/rlDate">

            <Switch
                android:id="@+id/swDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_activity_search_date" />

            <TextView
                android:id="@+id/tvAu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/swDate"
                android:layout_marginTop="60dp"
                android:text="@string/title_activity_search_to"
                android:visibility="invisible"  />

            <EditText
                android:id="@+id/etDu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginLeft="15dp"
                android:layout_toRightOf="@id/tvAu"
                android:ems="10"
                android:visibility="invisible"
                android:focusable="false"/>

            <TextView
                android:id="@+id/tvDu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAu"
                android:text="@string/title_activity_search_from"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/etAu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/tvDu"
                android:layout_marginTop="80dp"
                android:layout_marginLeft="15dp"
                android:ems="10"
                android:visibility="invisible"
                android:focusable="false"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/rlDistance"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginVertical="@dimen/layout_distance">

            <Button
                android:id="@+id/btnRechercheEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/hbRed"
                android:text="@string/title_activity_search_button"
                android:textColor="@color/colorAccent"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/search_button_marginBottom"
                android:padding="@dimen/search_button_padding"/>


        </RelativeLayout>
    </RelativeLayout>
</FrameLayout>
