<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.heh.homeband.activities.SearchEventsFrag">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/rl1"
            android:layout_marginTop="15dp">
            <TextView
                android:id="@+id/textView2"
                android:layout_width="119dp"
                android:layout_height="66dp"
                android:text="@string/title_activity_search_style"
                android:layout_marginLeft="35dp"
                />

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginLeft="52dp"
                android:layout_marginStart="52dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rl2">

            <EditText
                android:id="@+id/etVille"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textView3"
                android:layout_marginLeft="98dp"
                android:layout_marginStart="98dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="150dp"
                android:layout_height="66dp"
                android:layout_alignBaseline="@+id/etVille"
                android:layout_alignBottom="@+id/etVille"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:text="@string/title_activity_search_city" />

            <ImageButton
                android:id="@+id/imageButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/etVille"
                android:layout_toRightOf="@+id/etVille"
                app:srcCompat="@drawable/ic_place_black_24dp" />


        </RelativeLayout>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl4"

            android:layout_below="@+id/rl3"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/etKilometre"
                android:layout_alignBottom="@+id/etKilometre"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="36dp"
                android:layout_marginStart="36dp"
                android:text="@string/title_activity_search_distance" />

            <EditText
                android:id="@+id/etKilometre"
                android:layout_width="55dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/rl4"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:id="@+id/relativeLayout">

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/title_activity_search_date" />

        </RelativeLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etAu"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:background="@color/hbRed"
            android:gravity="center"
            android:text="@string/title_activity_search_button"
            android:textColor="@color/colorAccent" />


        <EditText
            android:visibility="invisible"
            android:id="@+id/etDu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignEnd="@+id/rl1"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignRight="@+id/rl1"
            android:layout_alignStart="@+id/button2"
            android:layout_below="@+id/rl4"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_below="@+id/etDu"
            android:layout_marginTop="17dp"
            android:layout_toLeftOf="@+id/rl1"
            android:layout_toStartOf="@+id/rl1"
            android:text="@string/title_activity_search_to" />

        <TextView
            android:visibility="invisible"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_above="@+id/etAu"
            android:layout_alignLeft="@+id/textView5"
            android:layout_alignStart="@+id/textView5"
            android:text="@string/title_activity_search_from" />

        <EditText
            android:visibility="invisible"
            android:id="@+id/etAu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView5"
            android:layout_alignBottom="@+id/textView5"
            android:layout_alignEnd="@+id/rl1"
            android:layout_alignLeft="@+id/etDu"
            android:layout_alignRight="@+id/rl1"
            android:layout_alignStart="@+id/etDu"
            android:ems="10"
            android:inputType="date" />


    </RelativeLayout>



</FrameLayout>
